@@ -120,6 +120,15 @@ Bug Fixes
 * SOLR-3658: Adding thousands of docs with one UpdateProcessorChain instance can briefly create 
   spikes of threads in the thousands. (yonik, Mark Miller)
 
+* SOLR-3656: A core reload now always uses the same dataDir.  (Mark Miller, yonik)
+
+* SOLR-3662: Core reload bugs: a reload always obtained a non-NRT searcher, which
+  could go back in time with respect to the previous core's NRT searcher.  Versioning
+  did not work correctly across a core reload, and update handler synchronization
+  was changed to synchronize on core state since more than on update handler
+  can coexist for a single index during a reload. (yonik)
+
+
 Other Changes
 ----------------------
 
